refactor: clean code, records, mapstruct, exceptions